--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/paulohpf/bootcamp-gostack-desafio-02#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "pg": "^7.12.1",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.2"
   },
   "devDependencies": {
