--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "<h1 align=\"center\">\r   <img alt=\"Gympoint\" title=\"Gympoint\" src=\".github/logo.png\" width=\"200px\" />\r </h1>",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,7 +18,9 @@
   },
   "homepage": "https://github.com/paulohpf/bootcamp-gostack-desafio-02#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.2"
